<resources>
    <string name="facebook_app_id">214099892459140</string>
    <string name="fb_login_protocol_scheme">fb214099892459140</string>
    <string name="app_name">Restaurante app</string>
    <string name="correo">Correo electronico</string>
    <string name="password">Contraseña</string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="registrese">Registrese</string>
    <string name="registro">Registrar</string>
    <string name="reppassword">Repetir contraseña</string>
    <string name="mCerrar">Cerrar sesion</string>
    <string name="mMain">Menu principal</string>
    <string name="perfil">Mi perfil</string>

    

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cambiarFrag">Cambiar Fragmento</string>
</resources>
